Calculation of precision for each language

--- a/Question2.ipynb
+++ b/Question2.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "from collections import defaultdict\n",
+    "\n",
     "\n",
     "def load_json(json_file_path):\n",
     "    \"\"\"Load JSON data from a file.\"\"\"\n",
@@ -27,12 +29,63 @@
     "        cleaned_text = text.encode('utf-8').decode('unicode-escape')\n",
     "        return cleaned_text\n",
     "    return None\n",
+    "def separate_issues_by_state(issue_data, state):\n",
+    "    \"\"\"Separate issues into open and closed based on state.\"\"\"\n",
+    "    return [issue for issue in issue_data[\"Sources\"] if issue[\"State\"] == state]\n",
+    "\n",
+    "def calculate_total_issues_by_language(issue_data):\n",
+    "    \"\"\"Calculate total issues for each language.\"\"\"\n",
+    "    total_issues = defaultdict(int)\n",
+    "    for issue in issue_data[\"Sources\"]:\n",
+    "        language = issue[\"RepoLanguage\"]\n",
+    "        if language is not None:\n",
+    "            total_issues[language] += 1\n",
+    "    return total_issues\n",
+    "\n",
+    "def calculate_precision_for_closed_issues(closed_issues):\n",
+    "    \"\"\"Calculate precision for each language only for closed issues.\"\"\"\n",
+    "    precision_results = {}\n",
+    "    for issue in closed_issues:\n",
+    "        language = issue[\"RepoLanguage\"]\n",
+    "        if language is not None:\n",
+    "            precision_results[language] = precision_results.get(language, 0) + 1\n",
+    "    return precision_results\n",
+    "\n",
+    "def add_entries_for_open_issues(open_issues, precision_results):\n",
+    "    \"\"\"Add entries for languages with no closed issues.\"\"\"\n",
+    "    for issue in open_issues:\n",
+    "        language = issue[\"RepoLanguage\"]\n",
+    "        if language is not None and language not in precision_results:\n",
+    "            precision_results[language] = 0\n",
+    "\n",
+    "def calculate_precision(precision_results, total_issues):\n",
+    "    \"\"\"Calculate precision for each language.\"\"\"\n",
+    "    for language, closed_count in precision_results.items():\n",
+    "        total_count = total_issues[language]\n",
+    "        precision_results[language] = closed_count / total_count if total_count > 0 else 0.0\n",
+    "    return precision_results\n",
     "\n",
     "json_file_path = 'Snapshots/20230831_061759_issue_sharings.json'\n",
     "issue_data = load_json(json_file_path)\n",
     "\n",
     "# Preprocess data\n",
-    "preprocessed_data = preprocess_data(issue_data)\n"
+    "preprocessed_data = preprocess_data(issue_data)\n",
+    "\n",
+    "# Separate issues by state\n",
+    "open_issues = separate_issues_by_state(preprocessed_data, 'OPEN')\n",
+    "closed_issues = separate_issues_by_state(preprocessed_data, 'CLOSED')\n",
+    "\n",
+    "# Calculate total issues by language\n",
+    "total_issues = calculate_total_issues_by_language(preprocessed_data)\n",
+    "\n",
+    "# Calculate precision for closed issues\n",
+    "precision_results = calculate_precision_for_closed_issues(closed_issues)\n",
+    "\n",
+    "# Add entries for open issues\n",
+    "add_entries_for_open_issues(open_issues, precision_results)\n",
+    "\n",
+    "# Calculate precision for each language\n",
+    "precision_results = calculate_precision(precision_results, total_issues)\n"
    ]
   }
  ],
@@ -52,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
