Plotted the precision values using graph

--- a/Question2.ipynb
+++ b/Question2.ipynb
@@ -6,9 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from collections import defaultdict\n",
+    "''' How  precise  is  ChatGPT  at  providing  responses  to  developer's  inquiries  about  various \n",
+    "programming languages? '''\n",
     "\n",
+    "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "from collections import defaultdict\n",
+    "import seaborn as sns\n",
     "\n",
     "def load_json(json_file_path):\n",
     "    \"\"\"Load JSON data from a file.\"\"\"\n",
@@ -29,6 +33,7 @@
     "        cleaned_text = text.encode('utf-8').decode('unicode-escape')\n",
     "        return cleaned_text\n",
     "    return None\n",
+    "\n",
     "def separate_issues_by_state(issue_data, state):\n",
     "    \"\"\"Separate issues into open and closed based on state.\"\"\"\n",
     "    return [issue for issue in issue_data[\"Sources\"] if issue[\"State\"] == state]\n",
@@ -65,6 +70,20 @@
     "        precision_results[language] = closed_count / total_count if total_count > 0 else 0.0\n",
     "    return precision_results\n",
     "\n",
+    "def plot_precision_bar_chart(languages, precision_values):\n",
+    "    \"\"\"Plot a horizontal bar chart for precision values.\"\"\"\n",
+    "    sns.set(style=\"whitegrid\")\n",
+    "    sns.set_palette(\"pastel\")  # Set a different color palette\n",
+    "    plt.figure(figsize=(10, 6))  # Set figure size for better visualization\n",
+    "    bar_width = 1  # Adjust the bar width here\n",
+    "    plt.barh(languages, precision_values, height=bar_width)\n",
+    "    plt.xlabel('Precision')\n",
+    "    plt.ylabel('Repository Language')\n",
+    "    plt.title('Precision of Closed Issues for Each Language')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage\n",
     "json_file_path = 'Snapshots/20230831_061759_issue_sharings.json'\n",
     "issue_data = load_json(json_file_path)\n",
     "\n",
@@ -85,7 +104,12 @@
     "add_entries_for_open_issues(open_issues, precision_results)\n",
     "\n",
     "# Calculate precision for each language\n",
-    "precision_results = calculate_precision(precision_results, total_issues)\n"
+    "precision_results = calculate_precision(precision_results, total_issues)\n",
+    "\n",
+    "# Plot precision values\n",
+    "languages = list(precision_results.keys())\n",
+    "precision_values = list(precision_results.values())\n",
+    "plot_precision_bar_chart(languages, precision_values)"
    ]
   }
  ],
